--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "build": "webpack",
+    "start": "webpack serve --mode development --config webpack.config.js",
+    "build": "webpack --env.NODE_ENV=production",
+    "dev": "webpack --env.NODE_ENV=development",
     "lint": "eslint ."
   },
   "repository": {
