--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack serve --mode development --config webpack.config.js",
-    "build": "webpack --env.NODE_ENV=production",
+    "build": "npx webpack --env NODE_ENV=production",
     "dev": "webpack --env.NODE_ENV=development",
     "lint": "eslint ."
   },
